# qclockie

./: .gitignore  CMakeLists.txt  LICENSE  QClockie.pro  README.md
doc/: readme.md  reference.md  todo.md  yahoo_search_location_reply_multiple.json  yahoo_weather_reply.json
doc/examples/: yahoo_search_location_reply.json
src/: main.cpp  version_number.h
src/alarm/: AlarmManager.cpp  AlarmManager.h
src/gui/: MainWindow.cpp  MainWindow.h  mainwindow.ui  ui_mainwindow.h
src/gui/alarm/: alarm.ui
src/gui/devconsole/: DevConsoleWidget.cpp  DevConsoleWidget.h  devconsole.ui  ui_devconsole.h
src/gui/settings/: SettingsWidget.cpp  SettingsWidget.h  settings.ui  ui_settings.h
src/lib/autostart/: AutostartHelper.h  AutostartHelperWindows.cpp  AutostartHelperWindows.h
src/lib/keyboardhook/: KeyboardHookWindows.cpp  KeyboardHookWindows.h
src/lib/runguard/: RunGuard.cpp  RunGuard.h
src/settings/: SettingsData.h  SettingsManager.cpp  SettingsManager.h
src/tts/: TextToSpeechInterface.cpp  TextToSpeechInterface.h  TextToSpeechNativeInterface.cpp  TimeAnnouncement.cpp  TimeAnnouncement.h
src/weather/: LocationData.h  WeatherData.h  YahooWeatherProvider.cpp  YahooWeatherProvider.h
tools/: deploy_win.bat
